# rust-wasm-with-graphviz

./: .gitignore  .gitmodules  Cargo.toml  README.md
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json
clib-graphviz/: Cargo.toml  build.rs  cpp-build.sh  cpp-install-graphviz.sh
clib-graphviz/cpp/: CMakeLists.txt
clib-graphviz/cpp/graphviz/: CMakeLists.txt
clib-graphviz/cpp/graphviz/graphvizlib/: CMakeLists.txt  main.cpp  main.hpp
clib-graphviz/src/: lib.rs
graphviz-sys/: Cargo.toml  build.rs  cmake-install.sh  cpp-build.sh
graphviz-sys/cmake/: wasi-sdk.cmake
graphviz-sys/cmake/graphvizlib/: main.c  main.h
graphviz-sys/cmake/headers/: setjmp.h
graphviz-sys/cmake/lib/common/: CMakeLists.txt
graphviz-sys/cpp/: CMakeLists.txt  wasi-sdk.cmake
graphviz-sys/cpp/graphvizlib/: CMakeLists.txt  main.c
graphviz-sys/cpp/lib/gvc/: CMakeLists.txt
graphviz-sys/src/: lib.rs
memo/: cpp-build.sh.md  emcc-compile.md  gcc-compiled.md
src/: adaptor.rs  lib.rs  main.rs
src/adaptor/: graphviz.rs
