[package]
name = "graphviz-ffi-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "libwasigraphviz"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "graphviz-sys"]

[dependencies]
graphviz-sys = { path = "./graphviz-sys" }
wasm-bindgen = "0.2"
anyhow = "1.0.*"
thiserror = "1.0.*"
